[package]
name = "mii"
description = "A rust-embedded implementation of the monome ii protocol"
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/mii"
authors = ["Chris Maniewski"]
version = "0.2.1"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ATOVproject/mii"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
